[tool.poetry]
name = "pycounts_mds_rodgersd"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Derek Rodgers"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "<3.10"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
